@@ -17,21 +17,22 @@
 
 package org.apache.solr.client.solrj;
 
+import org.apache.solr.common.params.SolrParams;
+import org.apache.solr.common.util.ContentStream;
+
 import java.io.IOException;
 import java.io.Serializable;
 import java.util.Collection;
 import java.util.Set;
-
-import org.apache.solr.common.params.SolrParams;
-import org.apache.solr.common.util.ContentStream;
+import java.util.concurrent.TimeUnit;
 
 /**
  * 
  *
  * @since solr 1.3
  */
-public abstract class SolrRequest implements Serializable
-{
+public abstract class SolrRequest<T extends SolrResponse> implements Serializable {
+
   public enum METHOD {
     GET,
     POST,
@@ -108,6 +109,29 @@ public abstract class SolrRequest implements Serializable
   }
 
   public abstract SolrParams getParams();
+
   public abstract Collection<ContentStream> getContentStreams() throws IOException;
-  public abstract SolrResponse process( SolrClient server ) throws SolrServerException, IOException;
+
+  /**
+   * Create a new SolrResponse to hold the response from the server
+   * @param client the {@link SolrClient} the request will be sent to
+   */
+  protected abstract T createResponse(SolrClient client);
+
+  /**
+   * Send this request to a {@link SolrClient} and return the response
+   * @param client the SolrClient to communicate with
+   * @return the response
+   * @throws SolrServerException if there is an error on the Solr server
+   * @throws IOException if there is a communication error
+   */
+  public T process(SolrClient client) throws SolrServerException, IOException {
+    long startTime = TimeUnit.MILLISECONDS.convert(System.nanoTime(), TimeUnit.NANOSECONDS);
+    T res = createResponse(client);
+    res.setResponse(client.request(this));
+    long endTime = TimeUnit.MILLISECONDS.convert(System.nanoTime(), TimeUnit.NANOSECONDS);
+    res.setElapsedTime(endTime - startTime);
+    return res;
+  }
+
 }
