@@ -17,15 +17,15 @@
 
 package org.apache.solr.client.solrj.request;
 
-import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrClient;
+import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.response.QueryResponse;
-import org.apache.solr.common.SolrException;
 import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.ContentStream;
 
+import java.io.IOException;
 import java.util.Collection;
 import java.util.concurrent.TimeUnit;
 
@@ -34,8 +34,8 @@ import java.util.concurrent.TimeUnit;
  *
  * @since solr 1.3
  */
-public class QueryRequest extends SolrRequest
-{
+public class QueryRequest extends SolrRequest<QueryResponse> {
+
   private SolrParams query;
   
   public QueryRequest()
@@ -79,24 +79,34 @@ public class QueryRequest extends SolrRequest
   }
 
   @Override
+  protected QueryResponse createResponse(SolrClient client) {
+    return new QueryResponse(client);
+  }
+
+  /**
+   * Send this request to a {@link SolrClient} and return the response
+   * @param client the SolrClient to communicate with
+   * @return the response
+   * @throws org.apache.solr.client.solrj.SolrServerException if there is an error on the Solr server
+   */
+  @Override
+  public QueryResponse process(SolrClient client) throws SolrServerException {
+    long startTime = TimeUnit.MILLISECONDS.convert(System.nanoTime(), TimeUnit.NANOSECONDS);
+    QueryResponse res = createResponse(client);
+    try {
+      res.setResponse(client.request(this));
+    } catch (IOException e) {
+      throw new SolrServerException("Error executing query", e);
+    }
+    long endTime = TimeUnit.MILLISECONDS.convert(System.nanoTime(), TimeUnit.NANOSECONDS);
+    res.setElapsedTime(endTime - startTime);
+    return res;
+  }
+
+  @Override
   public SolrParams getParams() {
     return query;
   }
 
-  @Override
-  public QueryResponse process( SolrClient client ) throws SolrServerException
-  {
-    try {
-      long startTime = TimeUnit.MILLISECONDS.convert(System.nanoTime(), TimeUnit.NANOSECONDS);
-      QueryResponse res = new QueryResponse( client.request( this ), client );
-      long endTime = TimeUnit.MILLISECONDS.convert(System.nanoTime(), TimeUnit.NANOSECONDS);
-      res.setElapsedTime(endTime - startTime);
-      return res;
-    } catch (SolrServerException | SolrException e){
-      throw e;
-    } catch (Exception e) {
-      throw new SolrServerException("Error executing query", e);
-    }
-  }
 }
 
